# epsilla-python-client

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  hello_epsilla_cloud_embedding.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: pypi-dev.yaml  pypi-publish.yml
.github/workflows/.github/workflows/: pypi-publish.yml
examples/: Question_Answering_Pipeline_with_LangChain_and_Epsilla.py  Question_Answering_Pipeline_with_LangChain_and_EpsillaCloud.py  embeddings.py  gist-960-euclidean.py  hello_epsilla.py  hello_epsilla_cloud.py  hello_epsilla_cloud_embedding.py  hello_epsilla_embedding.py  hello_epsilla_enterprise.py  hello_epsilla_rag.py  test_embedding_functions.py
jsClient/: client.ts  field.ts
pyepsilla/: __init__.py  models.py  simple_example.py
pyepsilla/abstract_class/: client.py  vector_db.py
pyepsilla/cloud/: __init__.py  client.py  readme.md  sentry.py
pyepsilla/enterprise/: __init__.py  client.py  readme.md  sentry.py
pyepsilla/utils/: __init__.py  rag.py  rest_api.py  search_engine.py
pyepsilla/vectordb/: __init__.py  client.py  client.ts  field.py  filed.py  readme.md  sentry.py  telemetry.py  version.py
pyepsilla/vectordb/machineid/: __init__.py
pyepsilla/vectordb/utils/: embedding_functions.py
vectordb/: client.ts  field.ts
