[tool.poetry]
name = "pyepsilla"
version = "0.3.10"
description = ""
authors = ["Epsilla <info@epsilla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
boto3 = "1.35.71"
posthog = "3.7.4"
py-machineid = "0.6.0"
sentry-sdk = "2.19.0"
requests = "2.32.3"
pydantic = "2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
