[tool.poetry]
name = "pyepsilla"
version = "0.3.13"
description = ""
authors = ["Epsilla <info@epsilla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
posthog = ">=3.2.0"
py-machineid = ">=0.5.0"
sentry-sdk = ">=2.2.0"
requests = ">=2.22.0"
pydantic = ">=2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
